{{$NEXT}}
   - fixed documentation bug for LOGWARN
   - updated Copyright info (years)

1.2.2     2013-04-23 01:42:51 Europe/Rome
   - fixed bugs in logdie & logwarn, now emitting output
     according to behaviour of "real" warn() and die()
   - fixed bugs in template expansion for some codes
   - exclude Log::Log4perl::Tiny from Carp's messages
   - all of the above thanks to Felix Li

1.2.1     2013-04-18 17:50:19 Europe/Rome
   - logwarn/LOGWARN no longer exit, aligning behaviour to what
     Log::Log4perl has today (thanks to Felix Li for this)

1.2.0     2012-10-13 11:07:35 Europe/Rome
   - added support for is_<<level>> and is<<Level>>Enabled by
     mindthemonkey on GitHub
     (https://github.com/polettix/Log-Log4perl-Tiny/pull/1)

1.1.2     2011-12-28 10:19:59 Europe/Rome
   - reverting to previous release numbering scheme... hopefully

v1.1.1    2011-12-28 09:28:29 Europe/Rome
   - release after bugfix

1.1.0_01  2011-11-17 02:29:44 Europe/Rome
   - solved bug https://rt.cpan.org/Ticket/Display.html?id=72476
     (thanks to Jonathan Wilson for pointing out)

1.1.0     2011-07-12 08:50:25 Europe/Rome
   - final fixes to the documentation
   - removed die-ing when option is not recognised
   - release

1.0.1_2   2011-07-07 15:53:15 Europe/Rome
   - stepped back to default log level $INFO

1.0.1_01  2011-07-06 18:51:51 Europe/Rome
   - added a $DEAD log level to disable all logging
   - set default logging level to $DEAD
   - added backwards compatibility option :default_to_INFO
   - added support for sub references as filehandles
   - added and fixed documentation
   - added tests for new features

1.0.0     2011-01-22 22:35:38 Europe/Rome
   - release

0.1.0_3   2010-12-06 07:41:47 Europe/Rome
   - set minimum perl version to 5.8.0

0.1.0_2   2010-12-05 00:10:16 Europe/Rome
   - fixed typos/errors in the documentation

0.1.0_1   2010-12-04 18:23:49 Europe/Rome
   - initial release